将kernel path的改为NT路径格式
通过getmodulefilename获取image path的nt路径

--- a/c++/MyFirstMFCApp/MyFirstMFCApp/MyFirstMFCApp.vcxproj
+++ b/c++/MyFirstMFCApp/MyFirstMFCApp/MyFirstMFCApp.vcxproj
@@ -186,12 +186,14 @@
     <ClInclude Include="MyFirstMFCApp.h" />
     <ClInclude Include="MyFirstMFCAppDlg.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ShowDllDlg.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyFirstMFCApp.cpp" />
     <ClCompile Include="MyFirstMFCAppDlg.cpp" />
+    <ClCompile Include="ShowDllDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
